--- a/src/skills.html
+++ b/src/skills.html
@@ -30,8 +30,8 @@
                 <li class="moreStuff hidden">GDScript</li>
                 <li class="moreStuff hidden">Dart/Flutter</li>
                 <li class="moreStuff hidden">Scratch</li>
-                <p id="moreSkills">&#9660; More</p>
             </ul>
+            <p id="moreSkills" class="moreButton">&#9660; More</p>
         </section>
         <p class="bio">I have NCEA level 1, 2, and 3. I have ~10 years of experience in Scratch and ~6 years with HTML, CSS and Python. JavaScript, Dart and GDScript are more recent learnings, being ~1 year each.<br><br>During the BIT, I have learned skills such as design, communication, and the Software Development Life Cycle (SDLC). I have also learned skills such as networking, virtualisation and building computer systems. However, my true passion is in programming.</p>
     </div>
